<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="100"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="100"
        tools:context="com.stefangansevles.foodbook.activities.CreateRecipeActivity">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >

            <EditText
                android:id="@+id/tbFoodName"
                android:layout_width="0dp"
                android:layout_weight="100"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/recipe_name"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            >

            <LinearLayout
                android:id="@+id/layoutSpinnerFood"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="@string/foodtypes_long"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinnerFood"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:dropDownHeight="10dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutSpinnerCountry"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/food_by_country_long"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinnerCountry"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:dropDownHeight="10dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="40"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:paddingBottom="15dp"
                android:text="@string/ingredients"/>

            <EditText
                android:id="@+id/tbIngredients"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:textSize="15sp"
                android:padding="10dp"
                android:gravity="top"
                android:hint="@string/ingredients_example"
                android:background="@layout/rounded_border_edittext">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCheckboxes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:paddingLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:text="@string/kitchenware"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:weightSum="3"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbOven"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/Oven"/>
                <CheckBox
                    android:id="@+id/cbPot"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/pot"/>
                <CheckBox
                    android:id="@+id/cbPan"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/pan"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:weightSum="3"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/cbFryer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/fryer"/>

                <CheckBox
                    android:id="@+id/cbMicrowave"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/microwave"/>

                <CheckBox
                    android:id="@+id/cbMixer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/mixer"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:weightSum="3"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbBlender"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/blender"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
